--- a/config/database.yml
+++ b/config/database.yml
@@ -80,6 +80,8 @@ test:
 #
 production:
   <<: *default
-  database: hurry_production
-  username: hurry
-  password: <%= ENV['HURRY_DATABASE_PASSWORD'] %>
+  hostname: <%= ENV['DATABASE_HOSTNAME'] %>
+  port:     <%= ENV['DATABASE_PORT'] %>
+  database: <%= ENV['DATABASE_NAME'] %>
+  username: <%= ENV['DATABASE_USERNAME'] %>
+  password: <%= ENV['DATABASE_PASSWORD'] %>
