fix db configuration parameter name

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,8 @@
-DATABASE_HOSTNAME=localhost
+DATABASE_HOST=localhost
 DATABASE_PORT=5432
 DATABASE_NAME=hurrytasker
 DATABASE_USERNAME=username
 DATABASE_PASSWORD=secret123
+
+# leave this if running without external Nginx / Apache web-server
+RAILS_SERVE_STATIC_FILES=1
