--- a/config/database.yml
+++ b/config/database.yml
@@ -80,7 +80,7 @@ test:
 #
 production:
   <<: *default
-  hostname: <%= ENV['DATABASE_HOSTNAME'] %>
+  host:     <%= ENV['DATABASE_HOST'] %>
   port:     <%= ENV['DATABASE_PORT'] %>
   database: <%= ENV['DATABASE_NAME'] %>
   username: <%= ENV['DATABASE_USERNAME'] %>
